Modified git repo url.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "bitcoin price btc exchange usd twd"
+    "url": "https://github.com/HuangJi/bitcoinex"
   },
   "keywords": [
     "bitcoin",
