--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bitcoinex",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An easy api let developer get exchanges current bitcoin price.",
   "main": "bitcoinex.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
     "twd"
   ],
   "author": "wilsonhuang",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^3.5.0",
+    "request-promise": "^2.0.1"
+  }
 }
